# ffmpeg_multi

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  README_FR.md
assets/samples/: original.mkv
examples/: example_encode_usage.cpp  example_prores_usage.cpp
include/core/: app.hpp  colors.hpp  ffmpeg_process.hpp  input.hpp  job.hpp  path_utils.hpp  string_utils.hpp
include/jobs/: codec_utils.hpp  concat.hpp  encode.hpp  encode_builder.hpp  encode_types.hpp  extract_frames.hpp  probe.hpp  reencode.hpp  reencode_builder.hpp  svt_av1_essential.hpp  thumbnails.hpp
scripts/: test_filtering.bat  test_filtering.ps1
src/: main.cpp
src/core/: app.cpp  ffmpeg_process.cpp  input.cpp  path_utils.cpp
src/jobs/: codec_utils.cpp  concat.cpp  encode.cpp  encode_builder.cpp  extract_frames.cpp  extract_frames_builder.cpp  probe.cpp  reencode.cpp  reencode_builder.cpp  svt_av1_essential.cpp  thumbnails.cpp  thumbnails_builder.cpp
tools/: README_test_filtering.md  test_filtering.cpp
